--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,19 +1,15 @@
-# Find the ROOT package
+# find ROOT
 find_package(ROOT REQUIRED COMPONENTS RIO Net)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
-find_package(ROOT REQUIRED)
-include_directories(${ROOT_INCLUDE_DIRS})
 
-set(Objects_DIR "${CMAKE_BINARY_DIR}/SObjects")
-message(STATUS "CMake: SObjects ${Objects_DIR}")
-find_package(TPCSimpleHits CONFIG )
-find_package(TPCSimpleLines CONFIG )
-find_package(TPCSimpleClusters CONFIG )
-find_package(TPCSimpleTriangles CONFIG )
-message(STATUS "---> ${TPCSimpleHits_FOUND}")
+# Add subdirectories for libraries
+add_subdirectory(Parser)
+add_subdirectory(SObjects)
+add_subdirectory(TPCLinesAlgo)
 
 
-# Compile the C++ code into a shared library
-add_library(TPCLinesDistanceUtils TPCLinesDistanceUtils.cpp)
-target_link_libraries (TPCLinesDistanceUtils LINK_SHARED TPCSimpleHits)
+# Add the main executable
+add_executable(RunAlgoTPCLines RunAlgoTPCLines.cpp)
 
+# Link the libraries to the main executable
+target_include_directories(RunAlgoTPCLines PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/TPCLinesAlgo)
+target_link_libraries(RunAlgoTPCLines PUBLIC tpclines_library sevents_library commandlineparser_library ROOT::Tree)
