--- a/src/TPCLinesAlgo/CMakeLists.txt
+++ b/src/TPCLinesAlgo/CMakeLists.txt
@@ -15,6 +15,8 @@ add_library(tpclines_library
     TPCLinesDBSCAN.h
     TPCLinesDirectionRecoUtils.cpp
     TPCLinesDirectionRecoUtils.h
+    TPCLinesParameters.cpp
+    TPCLinesParameters.h
 )
 
 # Include directories for header files
