add lambda tree

--- a/src/EventHandle/CMakeLists.txt
+++ b/src/EventHandle/CMakeLists.txt
@@ -7,6 +7,8 @@ add_library(seventhandle_library
     SEventHandle.h
     STPCAnalyzerTreeReader.cpp
     STPCAnalyzerTreeReader.h
+    LambdaAnaTree.cpp
+    LambdaAnaTree.h
     SParserConfig.h
 )
 
