--- a/src/TPCLinesAlgo/CMakeLists.txt
+++ b/src/TPCLinesAlgo/CMakeLists.txt
@@ -1,5 +1,33 @@
 message(status "Building " ${CMAKE_CURRENT_SOURCE_DIR})
 
+if(DEFINED ENV{LARSOFT_VERSION})
+    message(status " LARSOFT DEFINED SOBJECTS" )
+
+    art_make_library(
+        LIBRARY_NAME   sbndcode_TPCLines
+        
+        SOURCE
+            TPCLinesAlgo.cpp            
+            TPCLinesDisplay.cpp            
+            TPCLinesHough.cpp            
+            TPCLinesTrackFinder.cpp            
+            TPCLinesVertexFinder.cpp            
+            TPCLinesDBSCAN.cpp            
+            TPCLinesDirectionRecoUtils.cpp            
+            TPCLinesParameters.cpp
+        LIBRARIES
+            ROOT::Tree
+            ROOT::Core
+
+            sbndcode_SObjects
+            sbndcode_SEventHandle
+      )
+
+      install_headers()
+      install_source()
+endif()
+
+
 add_library(tpclines_library
     TPCLinesAlgo.cpp
     TPCLinesAlgo.h
