updates to FRANS

--- a/src/FRANS/CMakeLists.txt
+++ b/src/FRANS/CMakeLists.txt
@@ -8,6 +8,8 @@ if(DEFINED ENV{LARSOFT_VERSION})
         LIBRARY_NAME   sbndcode_FRANS
         
         SOURCE
+          FRANSObj.cpp
+          FRANSTree.cpp
           ChargeDensity.cpp
           LeastSquares.h
           VertexView.h
@@ -21,16 +23,21 @@ if(DEFINED ENV{LARSOFT_VERSION})
       
       )
 
+      art_dictionary(DICTIONARY_LIBRARIES sbndcode_FRANS)
+
       install_headers()
       install_source()
 endif()
 
 add_library(frans_library
   LeastSquares.h
+  FRANSObj.cpp
+  FRANSObj.h
   ChargeDensity.cpp
   ChargeDensity.h
   ChargeDensityPset.h
-  FRANSTTreeHandle.h
+  FRANSTree.cpp
+  FRANSTree.h
   VertexView.h
 )
 
@@ -40,3 +47,5 @@ target_include_directories(frans_library PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(frans_library PRIVATE sobjects_library)
 target_link_libraries(frans_library PRIVATE ROOT::Hist ROOT::Gpad)
 target_link_libraries(frans_library PUBLIC ROOT::TMVA)
+
+#ROOT_GENERATE_DICTIONARY(fransobj_dict FRANSObj.h LINKDEF classes.h)
