--- a/src/TPCLinesAlgo/CMakeLists.txt
+++ b/src/TPCLinesAlgo/CMakeLists.txt
@@ -7,7 +7,8 @@ if(DEFINED ENV{LARSOFT_VERSION})
         LIBRARY_NAME   sbndcode_TPCLines
         
         SOURCE
-            TPCLinesAlgo.cpp            
+            TPCLinesAlgo.cpp
+            TPCSimpleCalo.cpp       
             TPCLinesDisplay.cpp            
             TPCLinesHough.cpp            
             TPCLinesTrackFinder.cpp            
@@ -29,6 +30,8 @@ endif()
 
 
 add_library(tpclines_library
+    TPCSimpleCalo.cpp
+    TPCSimpleCalo.h
     TPCLinesAlgo.cpp
     TPCLinesAlgo.h
     TPCLinesDisplay.cpp
@@ -51,4 +54,7 @@ add_library(tpclines_library
 # Link math_library to string_library
 target_link_libraries(tpclines_library PRIVATE ROOT::Hist ROOT::Graf ROOT::Gpad)
 target_link_libraries(tpclines_library PRIVATE sobjects_library)
+target_link_libraries(tpclines_library PRIVATE frans_library)
+target_link_libraries(tpclines_library PRIVATE seventhandle_library)
+
 
