--- a/src/SObjects/CMakeLists.txt
+++ b/src/SObjects/CMakeLists.txt
@@ -52,5 +52,5 @@ add_library(sobjects_library
 target_include_directories(sobjects_library PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Link the libraries
-target_link_libraries(sobjects_library PUBLIC ROOT::Hist ROOT::Gpad)
+target_link_libraries(sobjects_library PUBLIC ROOT::Tree ROOT::Hist ROOT::Gpad)
 #target_link_libraries(sobjects_library PUBLIC frans_library)
